--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div id="pills" class="container">
             <a href="news.html"><button class="redpill" class="typed-out6" role="button">Choose</button></a>
-            <a href=""><button class="bluepill" class="typed-out6" role="button">Wisely</button></a>
+            <a href="news.html"><button class="bluepill" class="typed-out6" role="button">Wisely</button></a>
         </div>
     </body>
 </html>
