--- a/power.html
+++ b/power.html
@@ -31,7 +31,7 @@
             </a>
         </nav>
         <header>
-            <h3>Commisioner Beard's </h3>
+            <h3>Commissioner Beard's </h3>
             <h1>POWER RANKINGS </h1>
         </header>
         <main>
