--- a/forum.html
+++ b/forum.html
@@ -32,13 +32,13 @@
         </nav>
         <header>
             <h1>FORUM UNDER CONSTRUCTION</h1>
-            <h3>Go use snapchat<h3></h3>  
+            <h3>Git up on outta here</h3>  
         </header>
         <main>
             <div class="matchup" id="vsweek1">
                 <h4></h4>
+                <img src="https://pbs.twimg.com/profile_images/1377974253438562305/ftOl14Zv_400x400.png">
                 <p>
-                    
                 </p>
             </div>
         </main>
