--- a/power.html
+++ b/power.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Bottom nav bar (with icons)</title>
+        <title>The Big Dawgs Power Rankings</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="nav.css">
@@ -31,7 +31,7 @@
             </a>
         </nav>
         <header>
-            <h3>Commissioner Beard's </h3>
+            <h3>Commisioner Beard's </h3>
             <h1>POWER RANKINGS </h1>
         </header>
         <main>
