--- a/news.html
+++ b/news.html
@@ -42,7 +42,7 @@
                 </p>
             </div>
             <h1>'Mish's 'Mandments</h1>
-            
+            <img src="Moses.jpeg" id="moses" alt="">
             <div class="mandment-container">
                 <div class="mandments" id="mandment1">
                 <h3>First 'Mandment</h3>
@@ -63,14 +63,14 @@
             <h2>Musin' with the 'Mish</h2>
             <div class="mandment-container">
                 <div class="mandments" id="musing1pt1">
-                <h3>The Queen's Capers</h3>
+                <h3>The Queen's Men</h3>
                 <p>
-                    Lately I’ve found myself pacing about the grounds of my property line, searching for answers. Most of all, what would the queens fantasy lineup look like if she was in the Big Dawgs League. First off, Elizabeth, it should be noted was a raging racist. It is almost assured she would have sooner given back the north to Ireland than she would have a running back the likes of Leonard Fournette fighting in her stead. Similarly important to her love of bigotry was her enjoyment of the Hero RB draft strategy in which Liz would draft a sure fire stud RB early and follow that up with 3-4 rounds of heavy receiver recruitment. So we much assume a lineup following these guidelines would look something line this. <br>
+                    Lately I’ve found myself pacing about the grounds of my property line, searching for answers. Most of all, what would the queens fantasy lineup look like if she was in the Big Dawgs League. First off, Elizabeth, it should be noted was a raging racist. It is almost assured she would have sooner given back the north to Ireland than she would have a running back the likes of Leonard Fournette fighting in her stead. Similarly important to her love of bigotry was her enjoyment of the Hero RB draft strategy in which Liz would draft a sure fire stud RB early and follow that up with 3-4 rounds of heavy receiver recruitment. So we much assume a lineup following these guidelines would look something like this. <br>
                     ------------------>
                 </p>
                </div>
                <div class="mandments" id="musing1pt1">
-                <h3>The Queen's Capers Pt.2</h3>
+                <h3>The Queen's Men Pt.2</h3>
                 <p>
                     Round 1: Christian McCaffrey <br><br> White savior of the football skill position, easy <br><br>
                     Round 2: Travis Kelce <br><br>A lucky drop for the monarch, a fantastic choice at a depleted position<br><br>
