--- a/news.html
+++ b/news.html
@@ -42,7 +42,7 @@
                 </p>
             </div>
             <h1>'Mish's 'Mandments</h1>
-            <img src="Moses.jpeg" id="moses" alt="">
+            <img src="moses.jpeg" id="moses" alt="">
             <div class="mandment-container">
                 <div class="mandments" id="mandment1">
                 <h3>First 'Mandment</h3>
