--- a/news.html
+++ b/news.html
@@ -44,6 +44,14 @@
             <h1>'Mish's 'Mandments</h1>
             <img src="moses.jpeg" id="moses" alt="">
             <div class="mandment-container">
+                <div class="mandments" id="mandment2">
+                    <h3>Second 'Mandment</h3>
+                    <p>
+                        The big story entering week 3? The wheat, and its inevitable seperation from the chaff. You see wheat and chaff normally live in perfect harmony, much like all of our league. It dances idly in the breeze, holding onto one another because they need each other, they love each other. However, every autumn something pretty fucking crazy happens. They leave each other, they become individuals with one holding the clear and obvious value, the wheat. We make delicious cereal from it, some bread, and pretty much nothing else. The chaff however, that dreaded fucking chaff. Useless. Disgusting. Not even fit for pig slop. This is much like how our league is shaking out today. The Fallen Angels paced at the top by fantasy pimps Teteo and Bryan, with four 1-1 teams nipping at their heels, a healthy division where nothing is decided. Then we have the upper elite of Satan’s Squadron, Andrew. Really the only positive from that dreaded division. These teams make up the nutritious and delicious wheat of the league. Those other members not included make up the dreaded chaff. Time will tell if any of these chaff-lings can complete a wheat-like metamorphosis moving into the later weeks, but for now it appears grim.
+    <br><br>- commish, out
+
+                    </p>
+                    </div>
                 <div class="mandments" id="mandment1">
                 <h3>First 'Mandment</h3>
                 <p>
@@ -53,7 +61,7 @@
                 <img src="mandment1.jpeg" class="mandment-img" alt="">
                 </p>
                 </div>
-                <div class="mandments" id="mandment2">
+                <div class="mandments" id="mandment0">
                     <h4>9/16/22: Fantasy Football Website Launch!</h4>
                     <p>
                         Welcome to the official "The Big Dawgs" fantasy football website.  By using the bottom navigation bar you will be able to access: Up to date league news, weekly power rankings, league game previews, and communicate with your league-mates on the forum. 
@@ -62,6 +70,12 @@
             </div><br>
             <h2>Musin' with the 'Mish</h2>
             <div class="mandment-container">
+                <div class="mandments" id="musing2">
+                    <h3>Shower thoughts of an unwashed football fan</h3>
+                    <p>
+                        Football fucking rocks man. It’s like turn based strategy in real life. Preset attacks and defenses set before the snap goes live with chances for individual heroism and any second while the play runs its course. Like X-com for people who don’t know how to reset their Wi-Fi.
+                    </p>
+                   </div>
                 <div class="mandments" id="musing1pt1">
                 <h3>The Queen's Men</h3>
                 <p>
