--- a/power.html
+++ b/power.html
@@ -32,24 +32,43 @@
         </nav>
         <header>
             <h3>Commisioner Beard's </h3>
-            <h1>POWER RANKINGS </h1>
+            <img src="RANKINGS.jpeg" id="rankings">
         </header>
         <main>
+            <div class="rankings" id="week3">
+                <p>Week 3:</p>
+                   <ol>
+                    <li>Teteo(up)- Teteo has crafted the dream squad. Take notes.</li><br>
+                    <li>Bryan(up)- Consistent excellence. He just gets the job done.</li><br>
+                    <li>Jake(up)- Coming back strong after a week one loss. Jake is building steam.</li><br>
+                    <li>Colt(down)- A week 2 disappointment, but Colt has tasted the good life. He’ll be wanting more.
+                    </li><br>
+                    <li>Andrew- Did what it took to get the victory. But he can’t expect to do the same against a contender.</li><br>
+                    <li>Sam(down)- Losing to the previous week’s shitlicker after a promising week one leads to a big demotion. *<br><br>*editors note, since the initial writing of the rankings Sam was able to barely win.</li><br>
+                    <li>Zack(up) - A middling week, but a win all the same. We will need to see some improvement moving forward.</li><br>
+                    <li>Kyler(down)- Disappointment after a string opening showing last week. Is there trouble in the house of the running back?</li><br>
+                    <li>Jason(up)- The ass shaking gifs are back. But Josh Jacobs is not, thank god.</li><br>
+                    <li>Ethan(up) - Any week under 100 is a massive blow to the ego and requires a hard look at the roster. Luckily for Ethan the league has no shortage of bottom dwellers to rise above.</li><br>
+                    <li>Caleb(up)- Crowned “Worst Roster in The League” by popular opinion, Caleb did little to prove doubters wrong. Fortunately for him he was able to pull himself from the septic tank this week fashioning another teams bloated corpse below him as a sort of human life raft…</li><br>
+                    <img src="mtndew.png" id="dew"><h2>SHITTER OF THE WEEK</h2><br>
+                    <li>Josh(down) - Really, really not great man. Two weeks in a row to open the new season with sub 90 point scoring. Not only that but doing so in the face of a true god-like opponent. Like if David and Goliath ended with Goliath using David’s skinned flesh as a doormat after shooting him in the face with a shotgun. I think the Bible would be cooler if that happened, but in this case Josh’s loss is pitiable. Get that trade machine up and running and be ready to lay down some fat FAAB stacks cuz this team needs a reset asap. </li><br>
+                    </ol> 
+            </div>
             <div class="rankings" id="week2">
                 <p>Week 2:</p>
                    <ol>
-                    <li>Sam(up 1)- Five QB interceptions and Two running back heroes equals WIN.</li><br>
-                    <li>Colt(up 1)- Usually by this point colt has renounced religion and all hope.</li><br>
-                    <li>Bryan(up 1)- A win is a win. Even if it's Caleb.</li><br>
-                    <li>Kyler(up 1)- Second highest scorer, fourth in power rankings. Possible conspiracy against this maverick owner?</li><br>
-                    <li>Andrew(up 3)- If this guy ever learns who to play off his bench we are all fucked.</li><br>
-                    <li>Jake(up 3)- Two gods, one L.</li><br>
+                    <li>Sam(up)- Five QB interceptions and Two running back heroes equals WIN.</li><br>
+                    <li>Colt(up)- Usually by this point colt has renounced religion and all hope.</li><br>
+                    <li>Bryan(up)- A win is a win. Even if it's Caleb.</li><br>
+                    <li>Kyler(up)- Second highest scorer, fourth in power rankings. Possible conspiracy against this maverick owner?</li><br>
+                    <li>Andrew(up)- If this guy ever learns who to play off his bench we are all fucked.</li><br>
+                    <li>Jake(up)- Two gods, one L.</li><br>
                     <li>Zack - Josh Allen can only do so much to try and save this self inflicted starter decision disaster.</li><br>
-                    <li>Ethan(up 3)- Not last!</li><br>
-                    <li>Teteo(down 8)- Teteo's first two picks may have been duds, but the entire Jets offense is ready to take this team to the next level.</li><br>
+                    <li>Ethan(up)- Not last!</li><br>
+                    <li>Teteo(down)- Teteo's first two picks may have been duds, but the entire Jets offense is ready to take this team to the next level.</li><br>
                     <li>Jason - It's the Pitts.</li><br>
-                    <li>Josh(down 5)- Losing by one point is always a tragedy. Knowing that if you had started no one in the flex and you would have won? Enough to crush a man's soul.</li><br>
-                    <img src="mtndew.png"><h2>SHITTER OF THE WEEK</h2><br>
+                    <li>Josh(down)- Losing by one point is always a tragedy. Knowing that if you had started no one in the flex and you would have won? Enough to crush a man's soul.</li><br>
+                    <img src="mtndew.png" id="dew"><h2>SHITTER OF THE WEEK</h2><br>
                     <li>Caleb - 9 players, not even 80 points. You'd better be thanking your lucky stars that the Browns so happily employ human scum because without Kareem Hunt we would have tossed the season away and just assigned you last place punishment in week 1. Najee dead, Etienne already usurped by James Robinson, Prescott fucked, CeeDee bust, Kittle made of glass. Only one option left. Jamaal Williams SZN. </li><br>
                     </ol> 
             </div>
