--- a/versus.html
+++ b/versus.html
@@ -31,17 +31,48 @@
             </a>
         </nav>
         <header>
-            <h1>MATCHUP OF THE WEEK</h1>
-            <h3>Love, Hardship, Betrayal, Revenge, Justice.<br> These are the storylines you lust for and bust for.</h3>  
+            <h1>'Mish's 'Matchups</h1>  
         </header>
         <main>
-            <div class="matchup" id="vsweek1">
-                <h4>ROCKY</h4>
+            <div class="news-post" id="news1">
+                
                 <p>
-                    He's been beaten, bruised up, and broken. Down but not out, Caleb is looking to rise from the ashes after a harrowing defeat. Coach has his work cut out for him against the highest scoring team from week 1. Will Najee rally to carry the lifeless corpse of Hurst so good :*).  Or are we in for a legendary Barkley beatdown.<br> 
-                <img src="https://a4.espncdn.com/combiner/i?img=%2Fphoto%2F2018%2F0621%2Fr389700_1296x729_16%2D9.jpg&w=1140&cquality=40&format=jpg">
+                    Love, Hardship, Betrayal, Revenge, Justice.<br> These are the storylines you lust for and bust for.
                 </p>
             </div>
+            <h2>Game of the Week</h2>
+            <div class="mandment-container">
+                <div class="mandments" id="musing2">
+                    <h3>Mike Evanescence (W3)</h3>
+                    <p>
+                        The ultimate House hater vs the undisputed champion of The House. Time to settle this dispute. Zack catches a break with Mike Evans out, little does he know it will only serve to bring Bryan's team to life.
+                        <img src="bring me to life mike.png">
+                    </p>
+                   </div>
+                <div class="mandments" id="musing1pt1">
+                        <h3>ROCKY (W2)</h3>
+                        <p>
+                            He's been beaten, bruised up, and broken. Down but not out, Caleb is looking to rise from the ashes after a harrowing defeat. Coach has his work cut out for him against the highest scoring team from week 1. Will Najee rally to carry the lifeless corpse of Hurst so good :*).  Or are we in for a legendary Barkley beatdown.<br> 
+                        <img src="https://a4.espncdn.com/combiner/i?img=%2Fphoto%2F2018%2F0621%2Fr389700_1296x729_16%2D9.jpg&w=1140&cquality=40&format=jpg">
+                        </p>
+                    </div>
+               
+            </div>
+            <h2>Predictions</h2>
+            <div class="mandment-container">
+                <div class="mandments" id="mandment2">
+                    <h3>Week 3 Matchups</h3>
+                    <p>
+                        ZACK VS BRYAN (see game of the week) <br><br>Winner: Bryan<br><br><br>
+                        KYLER VS CALEB:<br><br>The perfect get right game for Kyler against the scarecrow that is Caleb’s fantasy squad. Caleb may have renounced his faith in god after this rough start, but maybe there’s someone a little more sinister that can aid him now…<br><br>Winner: Kyler<br><br><br>
+                        COLT VS SAM:<br><br>Pittman will be back for colt, but his quarterback won’t. We’ll see you on the waiver line. The tenacity of Sam’s fearsome running back duo will be needed after they were only at 50% strength in his squeezer of a win.<br><br>Winner: Sam<br><br><br>
+                        JAKE VS ETHAN:<br><br>Looking to add coal to the fire off the back of last week’s win, Jake will be happy to see the return of Gabe Davis and an upgrade for Julio if he is able to suit up. Ethan will be sending up a prayer that Davante and Chase will decide to show up.<br><br>Winner: Jake<br><br><br>
+                        TETEO VS JASON:<br><br>The Juggernaut has arrived and his name is Teteo. The full strength of this team may not be needed to topple Jason who stands teetering on the edge of this early season.<br><br>Winner: Teteo<br><br><br>
+                        JOSH VS ANDREW:<br><br>Andrew has assembled a lot of wins from the draft this year and comes into this contest with the highest projected point total on the week. Josh is just trying to hold on. This one could be over early.
+                        <br><br>Winner: Andrew<br><br><br>
+                    </p>
+                    </div>
+            </div><br>
         </main>
     </body>
 </html>
