--- a/news.html
+++ b/news.html
@@ -73,7 +73,7 @@
                 <div class="mandments" id="musing2">
                     <h3>Shower thoughts of an unwashed football fan</h3>
                     <p>
-                        Football fucking rocks man. It’s like turn based strategy in real life. Preset attacks and defenses set before the snap goes live with chances for individual heroism and any second while the play runs its course. Like X-com for people who don’t know how to reset their Wi-Fi.
+                        Football fucking rocks man. It’s like turn based strategy in real life. Preset attacks and defenses set before the snap goes live with chances for individual heroism at any second while the play runs its course. Like X-com for people who don’t know how to reset their Wi-Fi.
                     </p>
                    </div>
                 <div class="mandments" id="musing1pt1">
