--- a/news.html
+++ b/news.html
@@ -44,6 +44,15 @@
             <h1>'Mish's 'Mandments</h1>
             <img src="moses.jpeg" id="moses" alt="">
             <div class="mandment-container">
+                <div class="mandments" id="mandment3">
+                    <h3>Third 'Mandment</h3>
+                    <p>
+                        Money, money, money, money, money Some people got to have it Do things, Do things, do bad things with it Dollar bills, yall For that lean, mean, mean green Almighty dollar Talkin about money Give me a nickel, brother can you spare a dime Money can drive some people out of their minds Money, money, money, money, money<br><br>Not only do these words open every episode of The Apprentice hosted by the 45th president of the United States, they are also the thoughts rushing through each of our minds as we enter our weekly waiver bids. Maybe it’s just me, but I just can’t seem to figure out what the worth of a player is when we must assign a dollar value to them.  Especially so without much of a scale to weigh them against. Our league’s first year as a FAAB waiver system has been one filled with overpays that are often made to be the joke, but we should remember we are all in this learning process together. As we gain knowledge and learn how to accurately assess player worth and the individual monetary strategy of our league opponents, we will find less and less comedy in each other, and unlock a new part of this beautiful game we all love. 
+
+    <br><br>- commish, out
+
+                    </p>
+                    </div>
                 <div class="mandments" id="mandment2">
                     <h3>Second 'Mandment</h3>
                     <p>
@@ -70,6 +79,13 @@
             </div><br>
             <h2>Musin' with the 'Mish</h2>
             <div class="mandment-container">
+                <div class="mandments" id="musing3">
+                    <h3>Not superstitious, but a little bit stitious</h3>
+                    <p>
+                        What’s in a name? Does the effort put into a team name have an effect on a fantasy roster’s performance? In my own career I’ve found that my own superstition of needing to change my team’s name is not only a superstition, but also a signal of my own weekly hands on approach to forming a hopeful championship squad. While sifting through the waiver offerings and formulating trade offers I find it hard not to freshen up the team moniker to reflect my new weekly feeling. Does this mean that a team with a consistent name should expect to perform worse? No! We have only to look towards our own set and forget champion from last year Football Sucks. Now it could be argued that in some ways the stagnant title reflected a squad consisting of 2021 game-breakers Cooper Kupp and Derrick Henry. But I think it just goes to show that there are many paths to victory, just as there are many paths to a great team name.
+                    </p>
+                    <img src="gimp nut.png" class="mandment-img" alt="">
+                   </div>
                 <div class="mandments" id="musing2">
                     <h3>Shower thoughts of an unwashed football fan</h3>
                     <p>
