--- a/power.html
+++ b/power.html
@@ -31,10 +31,31 @@
             </a>
         </nav>
         <header>
-            <h3>Commisioner Beard's </h3>
+            <h3>Commissioner Beard's </h3>
             <img src="RANKINGS.jpeg" id="rankings">
         </header>
         <main>
+            <div class="rankings" id="week4">
+                <p>Week 4:</p>
+                   <ol>
+                    <li>Teteo- God squad is coming to your town, and they’re gonna fuck you up.</li><br>
+                    <li>Andrew(up)- Consistent production top to bottom. Like a well oiled fantasy machine. 
+                    </li><br>
+                    <li>Bryan(down)- A down week, but a bounce back is in order with a fresh new trade piece. </li><br>
+                    <li>Jake(down)- Both gods showed up. Unfortunately no one else did.
+                    </li><br>
+                    <li>Zack(up)- A decent showing amongst a down week for the league. But his depth has shined bright this week. </li><br>
+                    <li>Colt(up)- A solid comeback after last week’s loss. Colt needs to keep it up to stay with the upper tier of the league.</li><br>
+                    <li>Sam(down) - Adding insult to injury, Sam’s star Swift will be out of commission. Can he ride the backup to glory?</li><br>
+                    <li>Kyler- A low scoring contest for both teams is bad enough, but the spirit can break when you’ve lost to a team like Caleb’s. </li><br>
+                    <li>Ethan(up)- Fought through a running back injury game and came out clean. Khalil is now ride or die.</li><br>
+                    <li>Jason(down)- Cry now, cry later.
+                    </li><br>
+                    <li>Caleb- A moral and an actual victory. Big moves need to be made and fingers need to be crossed to keep the flame alive though. </li><br>
+                    <img src="mtndew.png" id="dew"><h2>SHITTER OF THE WEEK</h2><br>
+                    <li>Josh - Week 2 on the shit-list. I know it’s dark down here. I know it’s scary. Little to eat or drink. Constant attacks on your fantasy football acumen. But strengthen yourself. Let the pressure of the whole league standing on your head form you into a diamond. New week, new players, new opponent. What’s the worst that can happen? You’re already at rock bottom.</li><br>
+                    </ol> 
+            </div>
             <div class="rankings" id="week3">
                 <p>Week 3:</p>
                    <ol>
