--- a/versus.html
+++ b/versus.html
@@ -43,6 +43,13 @@
             <h2>Game of the Week</h2>
             <div class="mandment-container">
                 <div class="mandments" id="musing2">
+                    <h3>Weekend at Dre's (W4)</h3>
+                    <p>
+                        Sam’s beautiful little baby boy Swift is down with injury, time for the backup to shine. Zack rides high after securing a win during a down week for the league. Two titans of the Fallen Angels clash.
+                        <img src="weekendatdeandres.jpg">
+                    </p>
+                   </div>
+                <div class="mandments" id="musing2">
                     <h3>Mike Evanescence (W3)</h3>
                     <p>
                         The ultimate House hater vs the undisputed champion of The House. Time to settle this dispute. Zack catches a break with Mike Evans out, little does he know it will only serve to bring Bryan's team to life.
@@ -60,7 +67,21 @@
             </div>
             <h2>Predictions</h2>
             <div class="mandment-container">
-                <div class="mandments" id="mandment2">
+                <div class="mandments" id="matchup4">
+                    <h3>Week 4 Matchups</h3>
+                    <p>
+                        ZACK VS SAM (see game of the week) <br><br>Winner: Zack<br><br><br>
+                        KYLER VS BRYAN:<br><br>The arguably peak underperforming roster this season, helmed by the usually dependable Kyler, heads into week four against a slightly revamped squad headed by Bryan. A tight contest could develop if Kyler’s running back trio decides to show up.<br><br>Winner: Bryan<br><br><br>
+                        COLT VS CALEB:<br><br>A house divided cannot stand. These two former roommates and current Idahoans  residents will be avoiding eye contact this whole week as they pass by each other on their beautiful Boise downtown. What a great city. <br><br>Winner: Colt<br><br><br>
+                        JOSH VS ETHAN:<br><br>A new look squad for Josh looks to climb out of the sludge shit pit he has been entombed in, Ethan and Khalil will be tasked with making sure the dead do not rise.<br><br>Winner: Ethan<br><br><br>
+                        TETEO VS JAKE:<br><br>THE team of the season thus far helmed by Teteo squares off against the Jake’s meme team. Has the Yeti truly awakened? How long will Jake be able to start Raheem Mostert before he is forced to pivot? Find out this week! 
+                        <br><br>Winner: Teteo<br><br><br>
+                        JASON VS ANDREW:<br><br>Jason has waited patiently for Pitts to produce and it paid off last week. A tough task lays ahead of him and his name is Andrew Weber. He owns a large stock of talented football players and he’s ready to unleash them all on top of Mr. Lange’s hopes and dreams. Will Ekeler arrive in time to save the day? 
+
+                        <br><br>Winner: Andrew<br><br><br>
+                    </p>
+                    </div>
+                <div class="mandments" id="matchup3">
                     <h3>Week 3 Matchups</h3>
                     <p>
                         ZACK VS BRYAN (see game of the week) <br><br>Winner: Bryan<br><br><br>
